gitrepo-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: gitrepo-volume-pod
  labels:
    name: gitrepo-volume-pod
spec:
  containers:
  - name: gitrepo-volume-pod
    image: nginx:alpine
    volumeMounts:
      - mountPath: /usr/share/nginx/html
        name: html
        readOnly: true
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    ports:
      - containerPort: 80
        protocol: TCP
  volumes:
    - name: html
      gitRepo:
        repository: https://github.com/luksa/kubia-website-example.git
        revision: master
        directory: .
