testwebsite-pod.yml
apiVersion: v1
kind: Pod
metadata:
  name: test-website
spec:
  containers:
  - image: sharry.azurecr.io/testwebsite:latest
    imagePullPolicy: Always
    name: testwebsite
    ports:
    - containerPort: 80
      protocol: TCP
  imagePullSecrets:
    - name: azureregcred
