testwebsite-volume.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-volume
  labels:
    name: test-volume
spec:
  containers:
  - image: sharry.azurecr.io/testwebsite:latest
    imagePullPolicy: Always
    name: testwebsite
    ports:
    - containerPort: 80
      protocol: TCP
    volumeMounts:
      - mountPath: /app/test/
        name: file
  - name: testdocker
    image: sharry.azurecr.io/testdocker:latest
    imagePullPolicy: Always
    volumeMounts:
      - mountPath: /aaa/
        name: file
        readOnly: true
  volumes:
    - name: file
      azureFile:
        secretName: azure-storage-secret
        shareName: testfile 
        readOnly: false
  imagePullSecrets:
    - name: azureregcred
