vault.yaml
apiVersion: v1
kind: Pod
metadata:
  name: vault
  labels:
    name: vault
spec:
  containers:
  - name: vault
    image: vault:1.5.4
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
