kubia-svc-loadbalancer.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-loadbalancer
spec:
  selector:
    app: kubia
  type: LoadBalancer
  externalIPs:
    - "52.187.2.19"
  ports:
  - port: 80
    targetPort: 8080
