kubia-svc-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubia-nodeport
spec:
  selector:
    app: kubia
  type: NodePort
  externalIPs:
    - "52.187.2.19"
  ports:
  - port: 80 # internal port
    targetPort: 8080 # pod
    nodePort: 30123 # related to 'internal port' -> external port
