testwebsite-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: kubernetes-dashboard-svc
spec:
  selector:
    k8s-app: kubernetes-dashboard
  ports:
  - port: 8443
    targetPort: 8443
