dashboard-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
  name: kubia-nginx-node
spec:
  tls:
    - hosts:
      - node1.sharryxu.com
      secretName: tls-secret
  rules:
  - host: node1.sharryxu.com
    http:
      paths:
      - path: /dashboard
        backend:
          serviceName: kubernetes-dashboard-svc
          servicePort: 8443
